--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -7,6 +7,7 @@ AllowGameTagUnloading=False
 FastReplication=False
 InvalidTagCharacters="\"\',"
 +GameplayTagTableList=/Game/Blueprints/AbilitySystem/GameplayTags/DT_PrimaryAttributes.DT_PrimaryAttributes
++GameplayTagTableList=/Game/Blueprints/AbilitySystem/GameplayTags/DT_UIMessages.DT_UIMessages
 NumBitsForContainerSize=6
 NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Attributes.Vital.Energy",DevComment="A resource used to perform abilities")
